--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@napi-rs/canvas": "^0.1.51",
     "discord.js": "^14.14.1",
     "dotenv": "^16.4.5"
   }
