--- a/package.json
+++ b/package.json
@@ -11,7 +11,15 @@
   "license": "ISC",
   "dependencies": {
     "@napi-rs/canvas": "^0.1.51",
+    "@prisma/client": "^5.13.0",
     "discord.js": "^14.14.1",
-    "dotenv": "^16.4.5"
+    "dotenv": "^16.4.5",
+    "typescript": "^5.4.5"
+  },
+  "devDependencies": {
+    "prisma": "^5.13.0"
+  },
+  "prisma": {
+    "seed": "node prisma/seed.js"
   }
 }
