--- a/package.json
+++ b/package.json
@@ -4,7 +4,12 @@
   "description": "",
   "main": "src/index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "tsc": "tsc",
+    "build": "npx prisma generate && tsc",
+    "start": "node ./dist/app.js",
+    "dev": "nodemon -L -e ts --exec \"npm run build && npm start\"",
+    "debug": "nodemon dist/app.js"
   },
   "keywords": [],
   "author": "",
@@ -13,13 +18,16 @@
     "@napi-rs/canvas": "^0.1.51",
     "@prisma/client": "^5.13.0",
     "discord.js": "^14.14.1",
-    "dotenv": "^16.4.5",
-    "typescript": "^5.4.5"
+    "dotenv": "^16.4.5"
   },
   "devDependencies": {
-    "prisma": "^5.13.0"
+    "@tsconfig/node20": "^20.1.4",
+    "@types/node": "^20.12.11",
+    "prisma": "^5.13.0",
+    "ts-node": "^10.9.2",
+    "typescript": "^5.4.5"
   },
   "prisma": {
-    "seed": "node prisma/seed.js"
+    "seed": "ts-node prisma/seed.ts"
   }
 }
