--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,8 +3,19 @@
     "rootDir": "src",
     "compilerOptions": {
       "outDir": "dist",
-      "sourceMap": true
+      "sourceMap": true,
+      // "skipLibCheck": true,
+      "resolveJsonModule": true,
+      // "allowImportingTsExtensions": true,
+      // "emitDeclarationOnly": true,
+      // "declaration": true
     },
     "include": ["src/**/*"],
-    "exclude": ["node_modules"]
+    "exclude": ["node_modules"],
+    "ts-node": {
+      "esm":true
+    },
+    "types": [
+      "node"
+    ]
 }
