--- a/package.json
+++ b/package.json
@@ -20,11 +20,13 @@
     "@prisma/client": "^5.13.0",
     "discord.js": "^14.15.2",
     "dotenv": "^16.4.5",
-    "glob": "^7.2.0"
+    "glob": "^7.2.0",
+    "jimp": "^0.22.12"
   },
   "devDependencies": {
     "@tsconfig/node20": "^20.1.4",
     "@types/glob": "^8.1.0",
+    "@types/merge-images": "^1.2.4",
     "@types/node": "^20.12.12",
     "prisma": "^5.13.0",
     "ts-node": "^10.9.2",
