--- a/package.json
+++ b/package.json
@@ -17,20 +17,24 @@
   "license": "ISC",
   "dependencies": {
     "@napi-rs/canvas": "^0.1.51",
+    "@prisma/adapter-pg": "^5.22.0",
     "@prisma/client": "^5.13.0",
     "cron": "^3.1.7",
     "discord.js": "^14.15.2",
     "dotenv": "^16.4.5",
     "glob": "^7.2.0",
-    "jimp": "^0.22.12"
+    "jimp": "^0.22.12",
+    "pg": "^8.13.1"
   },
   "devDependencies": {
     "@tsconfig/node20": "^20.1.4",
     "@types/glob": "^8.1.0",
     "@types/merge-images": "^1.2.4",
     "@types/node": "^20.12.12",
+    "@types/pg": "^8.11.10",
     "prisma": "^5.13.0",
     "ts-node": "^10.9.2",
+    "tsx": "^4.19.2",
     "typescript": "^5.4.5"
   },
   "prisma": {
