--- a/tsconfig.json
+++ b/tsconfig.json
@@ -10,7 +10,7 @@
       // "emitDeclarationOnly": true,
       // "declaration": true
     },
-    "include": ["src/**/*"],
+    "include": ["src/**/*", "prisma/seed.ts"],
     "exclude": ["node_modules"],
     "ts-node": {
       "esm":true
