--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "@types/merge-images": "^1.2.4",
     "@types/node": "^20.12.12",
     "@types/pg": "^8.11.10",
+    "discord-api-types": "^0.37.110",
     "prisma": "^5.13.0",
     "ts-node": "^10.9.2",
     "tsx": "^4.19.2",
