--- a/package.json
+++ b/package.json
@@ -7,7 +7,10 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "tsc": "tsc",
     "build": "npx prisma generate && tsc",
-    "start": "npm run build && node ./dist/src/index.js"
+    "local": "npm run build && node ./dist/src/index.js",
+    "start:dev": "node ./dist/src/index.js",
+    "start:migrate:dev": "npx prisma migrate dev && npm run start:dev",
+    "start": "docker compose up --detach"
   },
   "keywords": [],
   "author": "",
