--- a/package.json
+++ b/package.json
@@ -23,20 +23,30 @@
     "discord.js": "^14.15.2",
     "dotenv": "^16.4.5",
     "glob": "^7.2.0",
-    "jimp": "^0.22.12",
+    "jimp": "^1.6.0",
     "pg": "^8.13.1"
   },
   "devDependencies": {
+    "@eslint/eslintrc": "^3.2.0",
+    "@eslint/js": "^9.16.0",
+    "@jimp/types": "^1.6.0",
     "@tsconfig/node20": "^20.1.4",
     "@types/glob": "^8.1.0",
+    "@types/jimp": "^0.2.1",
     "@types/merge-images": "^1.2.4",
     "@types/node": "^20.12.12",
     "@types/pg": "^8.11.10",
     "discord-api-types": "^0.37.110",
+    "eslint": "^9.16.0",
+    "eslint-config-prettier": "^9.1.0",
+    "eslint-plugin-prettier": "^5.2.1",
+    "globals": "^15.13.0",
+    "prettier": "^3.4.2",
     "prisma": "^6.0.1",
     "ts-node": "^10.9.2",
     "tsx": "^4.19.2",
-    "typescript": "^5.4.5"
+    "typescript": "^5.4.5",
+    "typescript-eslint": "^8.18.0"
   },
   "prisma": {
     "seed": "tsx prisma/seed.ts"
