--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "tsc": "tsc",
     "build": "npx prisma generate && tsc",
-    "local": "npm run build && node ./dist/src/index.js",
+    "local": "npm run build && node dist/src/index.js",
     "start:dev": "node ./dist/src/index.js",
     "start:migrate:dev": "npx prisma migrate dev && npm run start:dev",
     "start": "docker compose up --detach"
@@ -23,14 +23,15 @@
     "discord.js": "^14.15.2",
     "dotenv": "^16.4.5",
     "glob": "^7.2.0",
-    "jimp": "^1.6.0",
-    "pg": "^8.13.1"
+    "pg": "^8.13.1",
+    "sharp": "^0.33.5",
+    "source-map-support": "^0.5.21"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3.2.0",
     "@eslint/js": "^9.16.0",
     "@jimp/types": "^1.6.0",
-    "@tsconfig/node20": "^20.1.4",
+    "@tsconfig/node22": "^22.0.0",
     "@types/glob": "^8.1.0",
     "@types/jimp": "^0.2.1",
     "@types/merge-images": "^1.2.4",
