--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,11 +1,10 @@
 {
-    "extends": "@tsconfig/node20/tsconfig.json",
+    "extends": "@tsconfig/node22/tsconfig.json",
     "rootDir": "src",
     "compilerOptions": {
       "outDir": "dist",
       "sourceMap": true,
-      // "skipLibCheck": true,
-      "resolveJsonModule": true,
+      "resolveJsonModule": true
       // "allowImportingTsExtensions": true,
       // "emitDeclarationOnly": true,
       // "declaration": true
