fix[session-img]: text not displayed

--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "tsc": "tsc",
-    "build": "npx prisma generate && tsc",
+    "build": "npx prisma generate && tsc && copyfiles -u 1 src/resources/**/* dist/src",
     "local": "npm run build && node dist/src/index.js",
     "start:dev": "node ./dist/src/index.js",
     "start:migrate:dev": "npx prisma migrate dev && npm run start:dev",
@@ -19,6 +19,7 @@
     "@napi-rs/canvas": "^0.1.51",
     "@prisma/adapter-pg": "^5.22.0",
     "@prisma/client": "^6.0.1",
+    "canvas": "^2.11.2",
     "cron": "^3.1.7",
     "discord.js": "^14.15.2",
     "dotenv": "^16.4.5",
@@ -35,8 +36,9 @@
     "@types/glob": "^8.1.0",
     "@types/jimp": "^0.2.1",
     "@types/merge-images": "^1.2.4",
-    "@types/node": "^20.12.12",
+    "@types/node": "^22.10.2",
     "@types/pg": "^8.11.10",
+    "copyfiles": "^2.4.1",
     "discord-api-types": "^0.37.110",
     "eslint": "^9.16.0",
     "eslint-config-prettier": "^9.1.0",
