--- a/package.json
+++ b/package.json
@@ -1,54 +1,70 @@
 {
-  "name": "dnd-party-bot",
-  "version": "1.0.0",
-  "description": "",
-  "main": "dist/src/index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "tsc": "tsc",
-    "build": "npx prisma generate && tsc && copyfiles -u 1 src/resources/**/* dist/src",
+    "tsc": "tsc --project config/tsconfig.json",
+    "build": "npx prisma generate && npm run tsc && copyfiles -u 1 src/resources/**/* dist/src",
+    "dev": "tsx watch src/index.ts",
+    "dev:docker": "docker compose -f docker/docker-compose.dev.yml up --build --detach",
+    "dev:docker:down": "docker compose -f docker/docker-compose.dev.yml down",
+    "dev:start": "./scripts/dev-start.sh",
+    "dev:fresh": "./scripts/fresh-dev.sh",
     "local": "npm run build && node dist/src/index.js",
     "start:dev": "node ./dist/src/index.js",
     "start:migrate:dev": "npx prisma migrate dev && npm run start:dev",
-    "start": "docker compose up --detach"
+    "start": "docker compose -f docker/docker-compose.prod.yml up --build --detach",
+    "start:prod": "./scripts/prod-start.sh",
+    "start:fresh": "./scripts/fresh-prod.sh",
+    "stop": "docker compose -f docker/docker-compose.prod.yml down",
+    "stop:clean": "docker compose -f docker/docker-compose.prod.yml down --volumes --remove-orphans",
+    "stop:dev:clean": "docker compose -f docker/docker-compose.dev.yml down --volumes --remove-orphans",
+    "test:db": "./scripts/test-db.sh",
+    "lint": "eslint --config config/eslint.config.js src/",
+    "lint:fix": "eslint --config config/eslint.config.js src/ --fix",
+    "format": "prettier --config config/.prettierrc --write src/",
+    "format:check": "prettier --config config/.prettierrc --check src/"
   },
+  "name": "dnd-party-bot",
+  "version": "1.0.0",
+  "description": "",
+  "type": "module",
+  "main": "dist/src/index.js",
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@napi-rs/canvas": "^0.1.51",
+    "@napi-rs/canvas": "^0.1.78",
     "@prisma/adapter-pg": "^5.22.0",
-    "@prisma/client": "^6.1.0",
-    "cron": "^3.1.7",
-    "discord.js": "^14.15.2",
-    "dotenv": "^16.4.5",
-    "glob": "^7.2.0",
-    "pg": "^8.13.1",
+    "@prisma/client": "^6.15.0",
+    "cron": "^3.5.0",
+    "discord.js": "^14.22.1",
+    "dotenv": "^16.6.1",
+    "glob": "^7.2.3",
+    "pg": "^8.16.3",
     "sharp": "^0.33.5",
     "source-map-support": "^0.5.21"
   },
   "devDependencies": {
-    "@eslint/eslintrc": "^3.2.0",
+    "@eslint/eslintrc": "^3.3.1",
     "@eslint/js": "^9.16.0",
     "@jimp/types": "^1.6.0",
-    "@tsconfig/node22": "^22.0.0",
+    "@tsconfig/node22": "^22.0.2",
     "@types/glob": "^8.1.0",
     "@types/jimp": "^0.2.1",
     "@types/merge-images": "^1.2.4",
-    "@types/node": "^22.10.2",
-    "@types/pg": "^8.11.10",
+    "@types/node": "^22.18.0",
+    "@types/pg": "^8.15.5",
     "copyfiles": "^2.4.1",
-    "discord-api-types": "^0.37.110",
-    "eslint": "^9.16.0",
-    "eslint-config-prettier": "^9.1.0",
-    "eslint-plugin-prettier": "^5.2.1",
-    "globals": "^15.13.0",
-    "prettier": "^3.4.2",
-    "prisma": "^6.1.0",
+    "discord-api-types": "^0.37.120",
+    "eslint": "^9.34.0",
+    "eslint-config-prettier": "^9.1.2",
+    "eslint-plugin-prettier": "^5.5.4",
+    "globals": "^15.15.0",
+    "prettier": "^3.6.2",
+    "prisma": "^6.15.0",
     "ts-node": "^10.9.2",
-    "tsx": "^4.19.2",
-    "typescript": "^5.4.5",
-    "typescript-eslint": "^8.18.0"
+    "tsx": "^4.20.5",
+    "typescript": "^5.9.2",
+    "typescript-eslint": "^8.42.0"
   },
   "prisma": {
     "seed": "tsx prisma/seed.ts"
