--- a/package.json
+++ b/package.json
@@ -1,23 +1,21 @@
 {
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "tsc": "tsc --project config/tsconfig.json",
     "build": "npx prisma generate && npm run tsc && copyfiles -u 1 src/resources/**/* dist/src",
+    "tsc": "tsc --project config/tsconfig.json",
     "dev": "tsx watch src/index.ts",
     "dev:docker": "docker compose -f docker/docker-compose.dev.yml up --build --detach",
     "dev:docker:down": "docker compose -f docker/docker-compose.dev.yml down",
-    "dev:start": "./scripts/dev-start.sh",
-    "dev:fresh": "./scripts/fresh-dev.sh",
+    "dev:fresh": "docker compose -f docker/docker-compose.dev.yml down --volumes --remove-orphans && docker volume rm postgres-data node_modules_dev 2>/dev/null || true && npm run dev:docker",
     "local": "npm run build && node dist/src/index.js",
-    "start:dev": "node ./dist/src/index.js",
-    "start:migrate:dev": "npx prisma migrate dev && npm run start:dev",
     "start": "docker compose -f docker/docker-compose.prod.yml up --build --detach",
-    "start:prod": "./scripts/prod-start.sh",
-    "start:fresh": "./scripts/fresh-prod.sh",
+    "start:fresh": "docker compose -f docker/docker-compose.prod.yml down --volumes --remove-orphans && docker volume rm postgres-data 2>/dev/null || true && npm run start",
     "stop": "docker compose -f docker/docker-compose.prod.yml down",
     "stop:clean": "docker compose -f docker/docker-compose.prod.yml down --volumes --remove-orphans",
     "stop:dev:clean": "docker compose -f docker/docker-compose.dev.yml down --volumes --remove-orphans",
-    "test:db": "./scripts/test-db.sh",
+    "db:start": "docker compose -f docker/docker-compose.dev.yml up db --detach",
+    "db:stop": "docker compose -f docker/docker-compose.dev.yml stop db",
+    "db:test": "docker compose -f docker/docker-compose.dev.yml exec db pg_isready -U ${DB_USER:-postgres} -d ${DB_NAME:-dnd_party_bot}",
+    "cleanup": "docker system prune -f && docker container prune -f && docker image prune -f",
     "lint": "eslint --config config/eslint.config.js src/",
     "lint:fix": "eslint --config config/eslint.config.js src/ --fix",
     "format": "prettier --config config/.prettierrc --write src/",
@@ -34,7 +32,7 @@
   "dependencies": {
     "@napi-rs/canvas": "^0.1.78",
     "@prisma/adapter-pg": "^5.22.0",
-    "@prisma/client": "^6.15.0",
+    "@prisma/client": "^6.16.2",
     "cron": "^3.5.0",
     "discord.js": "^14.22.1",
     "dotenv": "^16.6.1",
@@ -60,7 +58,7 @@
     "eslint-plugin-prettier": "^5.5.4",
     "globals": "^15.15.0",
     "prettier": "^3.6.2",
-    "prisma": "^6.15.0",
+    "prisma": "^6.16.2",
     "ts-node": "^10.9.2",
     "tsx": "^4.20.5",
     "typescript": "^5.9.2",
