--- a/package.json
+++ b/package.json
@@ -30,10 +30,13 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@date-fns/tz": "^1.4.1",
+    "@date-fns/utc": "^2.1.1",
     "@napi-rs/canvas": "^0.1.78",
     "@prisma/adapter-pg": "^5.22.0",
     "@prisma/client": "^6.16.2",
     "cron": "^3.5.0",
+    "date-fns": "^4.1.0",
     "discord.js": "^14.22.1",
     "dotenv": "^16.6.1",
     "glob": "^7.2.3",
