--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "format": "prettier --config config/.prettierrc --write src/",
     "format:check": "prettier --config config/.prettierrc --check src/"
   },
-  "name": "dnd-party-bot",
+  "name": "party-manager-bot",
   "version": "1.0.0",
   "description": "",
   "type": "module",
