--- a/docker/Dockerfile.prod
+++ b/docker/Dockerfile.prod
@@ -52,4 +52,4 @@ EXPOSE 3000
 HEALTHCHECK --interval=30s --timeout=3s --start-period=40s --retries=3 \
     CMD node -e "require('http').get('http://localhost:3000/health', (res) => { process.exit(res.statusCode === 200 ? 0 : 1) })" || exit 1
 
-CMD ["npm", "run", "start:migrate:dev"]
+CMD ["npm", "run", "start:prod"]
