--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "lint": "eslint --config config/eslint.config.js src/",
     "lint:fix": "eslint --config config/eslint.config.js src/ --fix",
     "format": "prettier --config config/.prettierrc --write src/",
-    "format:check": "prettier --config config/.prettierrc --check src/"
+    "format:check": "prettier --config config/.prettierrc --check src/",
+    "generate-image": "tsx src/scripts/generate-session-image.ts",
   },
   "name": "party-manager-bot",
   "version": "1.0.0",
