--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "lint:fix": "eslint --config config/eslint.config.js src/ --fix",
     "format": "prettier --config config/.prettierrc --write src/",
     "format:check": "prettier --config config/.prettierrc --check src/",
-    "generate-image": "tsx src/scripts/generate-session-image.ts",
+    "generate-image": "tsx src/scripts/generate-session-image.ts"
   },
   "name": "party-manager-bot",
   "version": "1.0.0",
