--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "scripts": {
-    "build": "npx prisma generate && npm run tsc && copyfiles -u 1 src/resources/**/* dist/src",
+    "build": "npx prisma generate && npm run tsc && tsc-alias -p config/tsconfig.json && copyfiles -u 1 src/resources/**/* dist/src",
     "tsc": "tsc --project config/tsconfig.json",
     "dev": "tsx watch src/index.ts",
     "dev:docker": "docker compose -f docker/docker-compose.dev.yml up --build --detach",
@@ -65,6 +65,7 @@
     "prettier": "^3.6.2",
     "prisma": "^6.18.0",
     "ts-node": "^10.9.2",
+    "tsc-alias": "^1.8.16",
     "tsx": "^4.20.5",
     "typescript": "^5.9.2",
     "typescript-eslint": "^8.42.0"
