--- a/package.json
+++ b/package.json
@@ -78,7 +78,8 @@
     "glob": "^7.2.3",
     "pg": "^8.16.3",
     "sharp": "^0.33.5",
-    "source-map-support": "^0.5.21"
+    "source-map-support": "^0.5.21",
+    "winston": "^3.18.3"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3.3.1",
