--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,6 +1,6 @@
 {
   "extends": "./config/tsconfig.json",
-  "include": ["src/**/*", "prisma/seed.ts", "prisma/prisma.config.ts"],
+  "include": ["src/**/*", "prisma/seed.ts", "prisma.config.ts"],
   "exclude": [
     "node_modules",
     "dist",
