--- a/docker/Dockerfile.prod
+++ b/docker/Dockerfile.prod
@@ -6,6 +6,7 @@ WORKDIR /usr/src/app
 # Copy package files first for better caching
 COPY package.json package-lock.json ./
 COPY prisma ./prisma
+COPY prisma.config.ts ./prisma.config.ts
 
 # Install dependencies
 RUN npm ci && npm cache clean --force
@@ -21,9 +22,9 @@ RUN mkdir -p src/generated && \
     npx tsc-alias -p config/tsconfig.json && \
     mkdir -p dist/prisma && \
     cp prisma/schema.prisma dist/prisma/schema.prisma && \
-    cp prisma/prisma.config.ts dist/prisma/prisma.config.ts && \
-    npx tsc dist/prisma/prisma.config.ts --module nodenext --moduleResolution nodenext --target esnext --esModuleInterop && \
-    rm dist/prisma/prisma.config.ts && \
+    cp prisma.config.ts dist/prisma.config.ts && \
+    npx tsc dist/prisma.config.ts --module nodenext --moduleResolution nodenext --target esnext --esModuleInterop && \
+    rm dist/prisma.config.ts && \
     cp -r prisma/migrations dist/prisma/migrations
 
 # PRODUCTION STAGE
