--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "dev:fresh": "docker compose -f docker/docker-compose.dev.yml down --volumes --remove-orphans",
     "local": "npm run build && node dist/src/index.js",
     "start": "docker compose -f docker/docker-compose.prod.yml up --build --detach",
-    "start:prod": "prisma migrate deploy --config dist/prisma/prisma.config.js && node dist/src/index.js",
+    "start:prod": "prisma migrate deploy --config dist/prisma.config.js && node dist/src/index.js",
     "start:fresh": "docker compose -f docker/docker-compose.prod.yml down --volumes --remove-orphans && docker volume rm postgres-data 2>/dev/null || true && npm run start",
     "stop": "docker compose -f docker/docker-compose.prod.yml down",
     "stop:clean": "docker compose -f docker/docker-compose.prod.yml down --volumes --remove-orphans",
@@ -70,7 +70,7 @@
     "@date-fns/utc": "^2.1.1",
     "@napi-rs/canvas": "^0.1.78",
     "@prisma/adapter-pg": "^6.0.0",
-    "@prisma/client": "^7.0.0",
+    "@prisma/client": "^7.1.0",
     "cron": "^3.5.0",
     "date-fns": "^4.1.0",
     "discord.js": "^14.22.1",
@@ -99,7 +99,7 @@
     "eslint-plugin-prettier": "^5.5.4",
     "globals": "^15.15.0",
     "prettier": "^3.6.2",
-    "prisma": "^7.0.0",
+    "prisma": "^7.1.0",
     "ts-loader": "^9.5.4",
     "ts-node": "^10.9.2",
     "tsc-alias": "^1.8.16",
